new task commit

--- a/Portfolio/index2.html
+++ b/Portfolio/index2.html
@@ -122,7 +122,7 @@
 <body>
 
   <header>
-    <h1> Pegada thirupathi</h1>
+    <h1> Pegada Thirupathi</h1>
     <p>Frontend Developer | HTML | CSS | JavaScript</p>
   </header>
 
