--- a/CSS PROJECTS/index.html
+++ b/CSS PROJECTS/index.html
@@ -10,7 +10,7 @@
 <body>
     <h> <br>  NATURE SECTION </h> <hr>
       <div class="images">
-      <img class="image image-a" src="https://media.istockphoto.com/id/497953723/photo/motorway-at-night.jpg?s=612x612&w=0&k=20&c=L9mpvvxZhi2y1G23t-XmiW5bOH0xht-dzbCxkxAz5ho=" alt=""> 
+      <img class="image image-a" src="https://images.unsplash.com/photo-1649763067632-fd1f0010916f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzZ8fG5hdHVyZSUyMHBob3Rvc3xlbnwwfHwwfHx8MA%3D%3D" alt=""> 
       <img class="image image-b" src="https://media.istockphoto.com/id/184971248/photo/cosmos-flowers.jpg?s=612x612&w=0&k=20&c=5_YCNdx4NxXYkWWOV2wZzlG7zPSHvr6tVSLuopAhTk4=" alt="">
       <img class="image image-c" src="https://media.istockphoto.com/id/1415646363/photo/bouquet-of-cosmos.jpg?s=612x612&w=0&k=20&c=eyaON2dzbk06edIcT7Q8AgaOanAxYYGZLkq1R5uXy8o=" alt="">
       <img class="image image-d" src="https://media.istockphoto.com/id/1688903987/photo/bouquet-of-cosmos.jpg?s=612x612&w=0&k=20&c=-ew3roS0u05GySOEKEiI-2X8TGf4N0jr87NIMfyuMEE=" alt="">
@@ -19,6 +19,6 @@
       <img class="image image-g" src="https://media.istockphoto.com/id/1277355681/photo/pink-rose-blossoms-on-a-bush-copy-space.jpg?s=612x612&w=0&k=20&c=SMISpDculaddj2JtHKRVcrWwffvzZW3TU4tNa9tZ2pI=" alt="">
       <img class="image image-h" src="https://media.istockphoto.com/id/499553757/photo/pink-floribunda-bush-roses-flower-cluster-blurred-garden-background-leaves.jpg?s=612x612&w=0&k=20&c=7Pxpd1rbM-YNx-hJRed9SKsiFJ5DGBdpSaiDM9bNxjM=" alt="">
       <img class="image image-i" src="https://media.istockphoto.com/id/1914628146/photo/waterfall-pipe-creek-falls-cass-county-indiana.jpg?s=612x612&w=0&k=20&c=uRpFb3RBxOrMJlDeTrqP_mItapre5kyub8L5zJs-QGc=" alt="">
-      <img class="image image-j" src="https://media.istockphoto.com/id/485371557/photo/twilight-at-spirit-island.jpg?s=612x612&w=0&k=20&c=FSGliJ4EKFP70Yjpzso0HfRR4WwflC6GKfl4F3Hj7fk=" alt="">
+      <img class="image image-j" src="https://images.unsplash.com/photo-1704117200130-67adf12fed17?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTQwfHxuYXR1cmUlMjBwaG90b3N8ZW58MHx8MHx8fDA%3D" alt="">
 </body>
 </html>
