--- a/CSS PROJECTS/index9.html
+++ b/CSS PROJECTS/index9.html
@@ -21,7 +21,8 @@
       <a href="#">Mobiles ▾</a>
       <div class="dropdown-menu">
         <a href="#">Z Series</a>
-        <a href="#">Neo Series</a>
+        <a href="#">Neo Series</a>]
+      
       </div>
     </div>
 
