--- a/CSS PROJECTS/index2.html
+++ b/CSS PROJECTS/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GRID PROJECT</title>
-    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
      <h> <center>CUTE</center> </h> <hr>
