--- a/CSS PROJECTS/index9.html
+++ b/CSS PROJECTS/index9.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Flexbox Cart Design</title>
-  <link rel="stylesheet" href="flex.css">
+  <link rel="stylesheet" href="style5.css">
 </head>
 <body>
 
