--- a/supercss/index.html
+++ b/supercss/index.html
@@ -7,28 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h>  <center> <b> SYNTACTICALLY AWESOME STYLE SHEETS </center> </h> <hr>
+    <h>  <center> <b> SYNTACTICALLY AWESOME STYLE SHEETS </center> </h> <br>
     <div class="card">
         <img src="https://images.unsplash.com/photo-1676225491569-3dcea7ca33fa?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8Y3V0ZSUyMGJhYnklMjAlMjBib3klMjBuYXR1cmV8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&q=60&w=400" alt=""> 
-        <h1>  <b>Image1 </h1> 
+        <h1>  <b>Cuty1 </h1> 
 
     <div class="card">
         <img src="https://images.unsplash.com/photo-1738748703693-3ac099a3be24?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDM3fHx8ZW58MHx8fHx8&auto=format&fit=crop&q=60&w=400" alt="">
-        <h1>  <b> Image2 </h1>
+        <h1>  <b> Cuty2 </h1>
 
      <div class="card">
         <img src="https://images.unsplash.com/photo-1635377361665-60442f6cf799?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTh8fGN1dGUlMjBiYWJ5JTIwZ2lybCUyMG5hdHVyZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=400" alt="">
-        <h1>  <b> Image3 </h1>
+        <h1>  <b> Cuty3 </h1>
 
     <div class="card">
         <img src="https://images.unsplash.com/photo-1458134692397-fc4217ad1dc5?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODN8fGN1dGUlMjBiYWJ5JTIwZ2lybCUyMG5hdHVyZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=400" alt="">
-        <h1> <b>Image4 </h1>
+        <h1> <b> Cuty4 </h1>
 
-         <div class="card">
-        <img src="https://images.unsplash.com/photo-1723228569405-a4ce608cb5c1?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTA1fHxjdXRlJTIwYmFieSUyMGdpcmwlMjBuYXR1cmV8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&q=60&w=400" alt="">
-        <h1> <b> Image5 </h1>
 
-    
-    </div>
+        </div>
 </body>
 </html>
