--- a/Portfolio/index2.html
+++ b/Portfolio/index2.html
@@ -123,7 +123,7 @@
 
   <header>
     <h1> Pegada Thirupathi</h1>
-    <p>Frontend Developer | HTML | CSS | JavaScript</p>
+    <p>Frontend Developer | HTML | CSS | JavaScript | Bootstrap </p>
   </header>
 
   <nav>
@@ -147,6 +147,7 @@
       <li>HTML5</li>
       <li>CSS3</li>
       <li>JavaScript</li>
+      <li> Bootstrap</li>
       <li>Git & GitHub</li>
     </ul>
   </section>
@@ -160,12 +161,7 @@
       <a href="#">View Project</a>
     </div>
 
-    <div class="card">
-      <h3>To-Do App</h3>
-      <p>A simple JavaScript-based to-do list.</p>
-      <a href="#">View Project</a>
-    </div>
-  </section>
+    
 
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
