--- a/dom/index.html
+++ b/dom/index.html
@@ -14,20 +14,19 @@
 
 
     // DAY1 DOCUMENT OBJECT MODEL //
-    <h1> hello miss queen </h1>
+    <h1> hello world </h1>
 
-    // DAY 1 ADEVENTLISTENER PART-1 //
+   
 
-    <h1> hello miss queen </h1>
-     <h1> hello miss queen </h1>
-      <h1> hello miss queen </h1>
-
-
-                  /////   ID ID WILL SELECT  /////////////////////
-      <h1 id="queen">hello queen</h1>
+    <h1> hello </h1>         DAY 1 ADEVENTLISTENER PART-1 
+     <h1> hello  </h1>
+      <h1> hello  </h1>
 
 
-      //////////////////////////////////////////////////
+                  
+      <h1 id="queen"> </h1>      // ID ID WILL SELECT
+
+
 
 
 
