--- a/dom/index2.html
+++ b/dom/index2.html
@@ -3,23 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> TASK 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="box">
 
-    
+    </div>
+    <button class="btn"> click me</button>
 
-    <h1> cuty1 </h1>
-    <h1> cuty2 </h1>        
-    <h1> cuty3  </h1>
-    <h1> cuty4  </h1>
-
-
-    <h1 id="hero"> Cuty1</h1>
-
-
-
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
