--- a/dom/index2.html
+++ b/dom/index2.html
@@ -10,7 +10,15 @@
     <div id="box">
 
     </div>
-    <button class="btn"> click me</button>
+    <button class="btn"> GENERATE NEW COLOR</button>
+
+
+
+     <div id="box2">
+
+    </div>
+    <button class="btn2"> GENERATE IMAGES</button>
+    
 
     <script src="script2.js"></script>
 </body>
