--- a/dom/index2.html
+++ b/dom/index2.html
@@ -8,17 +8,10 @@
 </head>
 <body>
     <div id="box">
-
+      <h5> hey hie </h5>
     </div>
     <button class="btn"> GENERATE NEW COLOR</button>
 
-
-
-     <div id="box2">
-
-    </div>
-    <button class="btn2"> GENERATE IMAGES</button>
-    
 
     <script src="script2.js"></script>
 </body>
